# sea-battle-project

./: .gitignore  CMakeLists.txt  README.md  board.cpp  cell.cpp  constants.cpp  main  main.cpp  ship.cpp
cpp/: board.cpp  cell.cpp  constants.cpp  player.cpp  playerstate.cpp  ship.cpp  symbol.cpp
headers/: board.h  cell.h  constants.h  player.h  playerstate.h  point.h  ship.h  symbol.h
